added swagger doc for forgotPassword , resetPassword
